refreshed current city button, and added id to the emoji

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         <div class="row">
           <div class="col actualcity" id="chosen-city">Copenhagen</div>
           <div class="col actualweather">
-            🌤️
+            <span id="weather-emoji">🌤️</span>
             <span id="changing-degree"> 13 </span>
             <span> <a href="#" id="celsius">C°</a></span>
             <br />
