set the opening page data to default

--- a/index.html
+++ b/index.html
@@ -56,13 +56,13 @@
       </button>
       <section class="todaydetails">
         <div class="row">
-          <div class="col actualcity" id="chosen-city">Copenhagen</div>
+          <div class="col actualcity" id="chosen-city">City</div>
           <div class="col actualweather">
             <span id="weather-emoji">🌤️</span>
-            <span id="changing-degree"> 13 </span>
+            <span id="changing-degree"> 0 </span>
             <span> <a href="#" id="celsius">C°</a></span>
             <br />
-            <span id="condition">Cloudy</span>
+            <span id="condition">~</span>
           </div>
           <div class="col actualdate">
             <span id="current-day"> Sunday </span>
