added git hub link

--- a/index.html
+++ b/index.html
@@ -128,6 +128,13 @@
       </section>
       <footer>
         <div class="card dailymessage">Don't forget to smile! 😋</div>
+        <div class="git-hub-link">
+          <a
+            href="https://github.com/saroltah/my-weather-app/commits/main"
+            target="_blank"
+            >GitHub page</a
+          >
+        </div>
       </footer>
     </div>
     <script src="javaVersion3.js"></script>
